--- a/quiensomos.html
+++ b/quiensomos.html
@@ -38,6 +38,7 @@
                                                  <p id="vision"><strong>"Ser una de las páginas web de Bisutería más visitadas en México, y mejor aceptadas 
                                                                 del los clientes, como tener la mercancía de la mejor calidad, una compra y entrega segura, que los clientes queden completamente
                                                                  satisfechos con cada uno de los productos que eligieron".</strong></p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/xcbPJJycf1s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		 </article>
 	</section>
 	<aside>
